--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "dependencies": {
+    "apsl-react-native-button": "^3.0.0",
+    "parse": "^1.9.1",
     "react": "15.3.1",
     "react-native": "0.33.0",
     "react-native-material-design": "^0.3.7",
     "react-native-md-textinput": "^2.0.4",
+    "react-native-spinkit": "^0.1.3",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "flow-bin": "^0.32.0"
