--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-material-design": "^0.3.7",
     "react-native-md-textinput": "^2.0.4",
     "react-native-spinkit": "^0.1.3",
+    "react-native-vector-icons": "^2.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
