--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "parse": "^1.9.1",
     "react": "15.3.1",
     "react-native": "0.33.0",
+    "react-native-animatable": "^0.6.1",
     "react-native-material-design": "^0.3.7",
     "react-native-md-textinput": "^2.0.4",
     "react-native-spinkit": "^0.1.3",
