--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "15.3.1",
     "react-native": "0.33.0",
     "react-native-animatable": "^0.6.1",
+    "react-native-linear-gradient": "^1.5.13",
     "react-native-material-design": "^0.3.7",
     "react-native-md-textinput": "^2.0.4",
     "react-native-spinkit": "^0.1.3",
