--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "parse": "^1.9.1",
     "react": "15.3.1",
     "react-native": "0.33.0",
+    "react-native-action-button": "^2.0.4",
     "react-native-animatable": "^0.6.1",
+    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
+    "react-native-image-picker": "^0.22.8",
     "react-native-linear-gradient": "^1.5.13",
     "react-native-material-design": "^0.3.7",
     "react-native-md-textinput": "^2.0.4",
