--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactTest",
+  "name": "econdominio",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,8 +9,8 @@
   "dependencies": {
     "apsl-react-native-button": "^3.0.0",
     "parse": "^1.9.1",
-    "react": "15.3.1",
-    "react-native": "0.33.0",
+    "react": "15.4.0",
+    "react-native": "0.40.0",
     "react-native-action-button": "^2.0.4",
     "react-native-animatable": "^0.6.1",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
@@ -23,6 +23,7 @@
     "react-native-vector-icons": "^2.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-persist": "^4.3.1",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
