--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-loading-spinner-overlay": "^0.3.0",
     "react-native-material-design": "^0.3.7",
     "react-native-md-textinput": "^2.0.4",
+    "react-native-push-notification": "^2.2.1",
     "react-native-spinkit": "^0.1.3",
     "react-native-vector-icons": "^2.1.0",
     "react-redux": "^4.4.5",
