--- a/.flowconfig
+++ b/.flowconfig
@@ -24,11 +24,10 @@
 .*/Libraries/react-native/ReactNative.js
 .*/node_modules/jest-runtime/build/__tests__/.*
 
-# .*/node_modules/.*
-
 [include]
 
 [libs]
+node_modules/
 node_modules/react-native/Libraries/react-native/react-native-interface.js
 node_modules/react-native/flow
 flow/
@@ -57,4 +56,4 @@ suppress_comment=\\(.\\|\n\\)*\\$FlowFixedInNextDeploy
 unsafe.enable_getters_and_setters=true
 
 [version]
-^0.32.0
+^0.40.0
