--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-md-textinput": "^2.0.4",
     "react-native-push-notification": "^2.2.1",
     "react-native-spinkit": "^0.1.3",
+    "react-native-tab-view": "0.0.56",
     "react-native-vector-icons": "^2.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
